<resources>
    <string name="app_name">Feather Lyrics</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_register" translatable="false">RegisterActivity</string>
    <string name="about_a">Feather Lyrics, Vagalume and Spotify client API.</string>
    <string name="about_b">All the lyrics are provided by Vagalume.com.br\n\n“This product uses a SPOTIFY API but is not endorsed, certified or otherwise approved in any way by Spotify. Spotify is the registered trade mark of the Spotify Group.”\n\nArtist bigraphy is downloaded from Last.fm API\n\nhttp://www.last.fm/api/tos \n\nThis project is aviable on GitHub \n\n https://github.com/helicida/FeatherLyrics_APP</string>
    <string name="album_titulo">Title</string>
    <string name="album_subtitulo">Band</string>
    <string name="login_record">Rembeber credentials</string>
    <string name="login_button_entrar">Login</string>
    <string name="login_button_registrarse">Register</string>
    <string name="register_email">Email</string>
    <string name="register_contrasenya">Password</string>
    <string name="register_info">Personal data</string>
    <string name="register_nombre">Name</string>
    <string name="register_edad">Age</string>
    <string name="register_about">About me</string>
    <string name="register_button_register">Register</string>
    <string name="register_info_button">The application collects your location data to offer music based on your tastes and area.</string>
    <string name="canciones_info">Press the button to search the lyrics of the playing song</string>
    <string name="settings_notificaciones">Show notifications</string>
    <string name="settings_notificaciones_info">Mostar una notificación con el nombre de pista y nombnre del artista de la canción en reproducción</string>
    <string name="settings_splash">Splash Screen</string>
    <string name="settings_splash_info">Show the splash screen when starting the application</string>
    <string name="settings_tono">Application tone</string>
    <string name="settings_tono_info">Plays the application tone at the startup</string>
    <string name="settings_historial">Clear playback history</string>
    <string name="settings_historial_info">Clears the BBDD that contains the music history</string>
    <string name="settings_limpiar_bbdd">Clear BBDD</string>
    <string name="settings_cambiar_tono">CHANGE TONE</string>
    <string name="drawer_description">Your music, our music</string>
    <string name="nav_home">Home</string>
    <string name="nav_canciones">Songs</string>
    <string name="nav_discografia">Discography</string>
    <string name="nav_descubrir">Discover</string>
    <string name="nav_noticias">News</string>
    <string name="nav_reproducciones">Local playbacks</string>
    <string name="nav_category_ajustes">Adjustments</string>
    <string name="nav_configuración">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_salir">Exit</string>
    <string name="home_titulo">Local playbacks</string>
    <string name="home_descripcion">List of Android played songs</string>
    <string name="toolbar_noticias">News</string>
    <string name="toolbar_mapa">Discover - OSMap</string>
    <string name="toolbar_home">Local playback</string>
    <string name="toolbar_canciones">Songs</string>
    <string name="editarPerfilGuaradr">Save changes</string>
    <string name="url_imagen">Image URL</string>
    <string name="about_eslogan">Share your music</string>
    <string name="tab_usuario">USER</string>
    <string name="tab_artistas">ARTISTS</string>
    <string name="tab_canciones">SONGS</string>
    <string name="toolbar_fragmentAbout">About</string>
    <string name="toast_bbdd_settings">Se ha limpiado la base de datos correctamente</string>
    <string name="settings_toolbar">Settings</string>
</resources>
