<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    tools:showIn="@layout/activity_settings"
    tools:context="tk.sbarjola.pa.featherlyricsapp.SettingsActivityFragment">

    <Switch
        android:gravity="start"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/settings_notificaciones"
        android:id="@+id/settings_mostrarToast"
        android:checked="true"
        android:textColor="#000000"
        android:textAlignment="viewStart"
        android:textSize="20dp"
        android:textStyle="bold"
        android:paddingRight="30dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:showText="false"
        android:layout_marginTop="12dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_notificaciones_info"
        android:id="@+id/textView2"
        android:layout_alignTop="@+id/settings_mostrarToast"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="29dp" />

    <Switch
        android:gravity="start"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/settings_tono"
        android:id="@+id/settings_sound"
        android:checked="false"
        android:textColor="#000000"
        android:textAlignment="viewStart"
        android:textSize="20dp"
        android:textStyle="bold"
        android:paddingRight="30dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:showText="false"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_tono_info"
        android:id="@+id/textView4"
        android:layout_marginBottom="7dp"
        android:layout_alignBottom="@+id/settings_sound"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_limpiar_bbdd"
        android:id="@+id/settings_buttonBBDD"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/textView6"
        android:layout_toEndOf="@+id/textView6" />

    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="#767b80"
        android:id="@+id/view"
        android:layout_below="@+id/settings_sound"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/settings_historial"
        android:textSize="20dp"
        android:textStyle="bold"
        android:id="@+id/textView6"
        android:textColor="#000000"
        android:layout_below="@+id/view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_historial_info"
        android:id="@+id/textView7"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_cambiar_tono"
        android:id="@+id/settings_cambiarTono"
        android:layout_alignTop="@+id/settings_buttonBBDD"
        android:layout_toLeftOf="@+id/settings_buttonBBDD"
        android:layout_toStartOf="@+id/settings_buttonBBDD"
        android:layout_marginRight="39dp"
        android:layout_marginEnd="39dp" />

</RelativeLayout>