<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="tk.sbarjola.pa.featherlyricsapp.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editarPerfilGuaradr"
            android:id="@+id/editprofile_guardarCambios"
            android:layout_marginTop="24dp"
            android:layout_below="@+id/to_text_input_layout4"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/register_info"
            android:textSize="20dp"
            android:textStyle="bold"
            android:id="@+id/textView9"
            android:layout_below="@+id/editProfile_profilePic"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/to_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/to_text_input_layout2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editProfile_SobreMi"
                android:hint="@string/register_about"
                android:layout_below="@+id/to_text_input_layout2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/to_text_input_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/to_text_input_layout3"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editProfile_edadUser"
                android:hint="@string/register_edad" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/to_text_input_layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView9"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editProfile_nombreUser"
                android:hint="@string/register_nombre"
                android:layout_marginTop="12dp"
                android:layout_below="@+id/textView9"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/editProfile_SobreMi"
                android:layout_alignEnd="@+id/editProfile_SobreMi" />

        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/editProfile_profilePic"
            android:src="@drawable/user_icon"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/editprofile_guardarCambios"
            android:layout_alignStart="@+id/editprofile_guardarCambios" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/to_text_input_layout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/to_text_input_layout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editProfile_urlImagen"
                android:hint="@string/url_imagen"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

</ScrollView>


